source/main.css
@import "/source/fonts/font.css";

:root[font-mode="default"] {
    --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
}

:root[font-mode="avali"] {
    --font-family: AvaliScratch;
}

:root[color-mode="dark"] {
    --bg-color: #1a1a1a;
    --topbar-background: #fefefe;
    --text-color: #edebe8;
    --accent-color: #FF850D;
}

:root[color-mode="light"] {
    --bg-color: #eee;
    --topbar-background: #fefefe;
    --text-color: #121417;
    --accent-color: #FF850D;
}

body {
    /*font-family: STMono;*/
    cursor: url("/source/cursor.svg") 0 0, default;
    color: var(--text-color);
    font-family: var(--font-family);
}

main {
    margin-top: 60px;
}

body {
    background-color: var(--bg-color);
}

.dark {
    background: #1D1D1D;
}

.topbar a {
    margin: 5px;
    color: #000000;
    text-decoration: none;
}

.topbar {
    align-items: center;
    justify-content: space-between;
    float: left;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    border-bottom: black;
    padding: 5px;
    /*padding-left: 3%;*/
    font-size: 30px;
    height: 40px;
    box-shadow: 0px -5px 5px 5px darkgray;
    background-color: var(--topbar-background);
}

.topbar .topbar-right {
    float: right;
}

.verticalLine {
    border-left: 2px solid var(--accent-color);
    height: 70%;
    margin-right: 5px;
}

.topbar-pfp {
    margin-right: 32;
    border-radius: 100%;
    width: 32;
    height: 32;
    border: 2px solid var(--accent-color);
    background-color: lightgray;
    display: inline-block;
    cursor: pointer;
}

iframe {
    width: 100%;
    height: calc(100% - 60px);
}

.toggleBody {
    border-radius: 10px;
    width: 45px;
    height: 20px;
    background-color: #eeeeee;
    box-shadow: 3px 3px 5px -5px darkgrey inset, 3px 3px 5px -5px darkgrey inset;
    margin-right: 32;
    display: inline-block;
    /*box-shadow: -1px -1px 5px 5px darkgrey inset;*/
}

